# lead-qualifier

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
bot/: __init__.py  handler.py
models/: __init__.py  lead.py
qualifier/: __init__.py  client.py  prompt.py
sheets/: __init__.py  client.py
